fixed tableheader alignment on usersettings page (IE9 only)

--- a/templates/we1rdo/css/style.css
+++ b/templates/we1rdo/css/style.css
@@ -84,7 +84,7 @@ div.toolbarButton.dropdown ul {padding:0; margin:0; position:relative;}
 div.toolbarButton.dropdown li {list-style:none; padding:0 0 2px 0;}
 div.toolbarButton.dropdown ul ul {display:none; position:absolute; z-index:2; top:22px; background-color:#888888; border-left:1px solid #a6a6a6; border-right:1px solid #a6a6a6; border-bottom:1px solid #a6a6a6; padding:1px 2px 2px 2px;}
 div.toolbarButton.dropdown.left ul ul {left:-2px;}
-div.toolbarButton.dropdown.right ul ul {right:0;}
+div.toolbarButton.dropdown.right ul ul {right:0; }
 div.toolbarButton.dropdown li:hover ul {display:block;}
 div.toolbarButton.dropdown li li {border-bottom:1px solid #555555; line-height:20px; padding:0 5px; margin:0 0 2px 0; white-space:nowrap;}
 div.toolbarButton.dropdown li li:last-child {margin:0;}
@@ -101,6 +101,9 @@ div.closeuserpreferences p {margin:2px 2px 0 5px; line-height:18px; color:#fff; 
 div.closeeditsettings p a,
 div.closeusermanagement p a,
 div.closeuserpreferences p a {background:url(../img/sprite.png) no-repeat -88px -164px; font:11px Arial, Helvetica, sans-serif normal; color:white; padding:0 0 0 18px; cursor:pointer; display:block; height:16px; line-height:15px; margin:2px 0 0 0; text-decoration: none;}
+div#usermanagementtabs {margin:5px;}
+div#usermanagementtabs th {text-align:left; line-height:17px; padding:1px 5px; font-weight:bold;}
+div#usermanagementtabs td {padding:1px 5px;}
 div.ui-dialog-content form,
 form.editsettingsform,
 form.edituserprefsform {padding:5px;}
